[tool.poetry]
name = "hass-brightsky-client"
version = "0.1.1"
description = "Wrapping the API-specific parts of the brightsky component for Home-Assistant"
authors = ["Martin Weinelt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
